--- a/src/global.scss
+++ b/src/global.scss
@@ -39,5 +39,13 @@
 @import '@ionic/angular/css/palettes/dark.system.css';
 
 @import "leaflet/dist/leaflet.css";
-#map { height: 100%; }
-.leaflet-container { touch-action: pan-x pan-y; }
+
+:root {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+/* Slight boost in color contrast for the basemap */
+.map-root .leaflet-pane.leaflet-tile-pane {
+  filter: saturate(1.15) contrast(1.03);
+}
+
