Comment out 'Add to Calendar' button
Comment out the 'Add to Calendar' button in the map page.

--- a/src/app/page/map/map.page.html
+++ b/src/app/page/map/map.page.html
@@ -108,7 +108,7 @@
         <span class="foot-text">Climatology estimate, not a date-level forecast.</span>
       </div>
       <div class="actions" *ngIf="intentRange">
-        <ion-button size="small" (click)="addToCalendar()">Add to Calendar (.ics)</ion-button>
+        <!-- <ion-button size="small" (click)="addToCalendar()">Add to Calendar (.ics)</ion-button> -->
         <ion-button size="small" fill="outline" (click)="openGoogleCalendar()">Open in Google Calendar</ion-button>
       </div>
     </div>
